fix: made modal usable on mobile

--- a/src/ui/sass/trumbowyg.scss
+++ b/src/ui/sass/trumbowyg.scss
@@ -256,8 +256,9 @@ $transition-duration: 150ms;
     position: absolute;
     top: 0;
     left: 50%;
-    margin-left: -260px;
-    width: 520px;
+    transform: translateX(-50%);
+    max-width: 520px;
+    width: 100%;
     height: 350px;
     z-index: 11;
     overflow: hidden;
@@ -268,8 +269,9 @@ $transition-duration: 150ms;
     position: absolute;
     top: 0;
     left: 50%;
-    margin-left: -250px;
-    width: 500px;
+    transform: translateX(-50%);
+    max-width: 500px;
+    width: calc(100% - 20px);
     padding-bottom: 45px;
     z-index: 1;
     background-color: #FFF;
@@ -291,7 +293,6 @@ $transition-duration: 150ms;
 
     .trumbowyg-progress {
         width: 100%;
-        background: #F00;
         height: 3px;
         position: absolute;
         top: 58px;
@@ -324,7 +325,7 @@ $transition-duration: 150ms;
                 background-color: lighten($light-color, 5%);
                 border: 1px solid #DEDEDE;
                 padding: 0 7px;
-                width: 137px;
+                width: 150px;
             }
             span.trumbowyg-msg-error {
                 color: #e74c3c;
@@ -349,9 +350,10 @@ $transition-duration: 150ms;
             height: 27px;
             line-height: 27px;
             border: 1px solid #DEDEDE;
-            background: transparent;
+            background: #fff;
             font-size: 14px;
-            width: 340px;
+            max-width: 330px;
+            width: 70%;
             padding: 0 7px;
             transition: all $transition-duration;
 
@@ -361,7 +363,7 @@ $transition-duration: 150ms;
                 border: 1px solid #95a5a6;
             }
             &:focus {
-                background: rgba(230, 230, 255, .1);
+                background: lighten($light-color, 5%);
             }
         }
     }
@@ -708,7 +710,7 @@ body.trumbowyg-body-fullscreen {
                     border-color: lighten($dark-color, 25%);
                 }
                 &:focus {
-                    background-color: rgba(230, 230, 255, .1);
+                    background-color: lighten($dark-color, 5%);
                 }
             }
         }
